# beagle

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.claude/skills/beagle/: SKILL.md
.claude/skills/beagle-review/: SKILL.md
.claude/skills/rca/: SKILL.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  desktop.yml  release-desktop.yml  release.yml  web-image.yml  web.yml
cli/: Cargo.toml
cli/src/: ansi.rs  banner.rs  clipboard.rs  config.rs  handoff.rs  lib.rs  main.rs  model.rs  notify.rs  prs.rs  similar.rs  skill.rs
cli/src/cli/: mod.rs  subcommands.rs
cli/src/store/: context.rs  export.rs  mod.rs  mutate.rs
cli/src/tests/: banner.rs  config.rs  fuzzy.rs  handoff.rs  links.rs  model.rs  notify.rs  prs.rs  similar.rs  skill.rs
cli/src/ui/: actions.rs  event_loop.rs  finder.rs  keys.rs  mod.rs  mouse.rs  overlays.rs  pane.rs  search.rs  settings.rs  tabs.rs
cli/src/update/: mod.rs  picker.rs
deploy/helm/beagle-web/: .helmignore  Chart.yaml  values.yaml
desktop/: .gitignore  CHANGELOG.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src/: App.css  App.tsx  api.ts  main.tsx  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  dto.rs  lib.rs  main.rs
desktop/src/components/: ArchiveButton.tsx  Brand.tsx  DiagramView.tsx  FinderOverlay.tsx  HelpOverlay.tsx  IncidentHeader.tsx  Markdown.tsx  PrChips.tsx  SectionView.tsx  Sidebar.test.tsx  Sidebar.tsx  TabBar.tsx
desktop/src/hooks/: useActions.ts  useIncidents.ts  useKeybindings.ts  usePrStates.ts  useTheme.ts
desktop/src/lib/: ansi.test.ts  ansi.ts  filter.test.ts  filter.ts  finder.test.ts  finder.ts  format.test.ts  format.ts  fuzzy.test.ts  fuzzy.ts  keys.ts  markdown.test.ts  markdown.ts  pr.test.ts  pr.ts  sections.test.ts  sections.ts  theme.test.ts  theme.ts
docs/: CODING_STANDARDS.md  CODING_STANDARDS_TS.md
rcas/2026-05-12-example-checkout-timeouts/: final-review.md  impact.md  log.md  notes.md  rca.toml  remediation.md  root-cause.md  summary.md  timeline.md
rcas/2026-05-12-example-checkout-timeouts/diagrams/: 01-request-path.txt
rcas/2026-06-30-sendgrid-webhook-signature-failures/: impact.md  notes.md  rca.toml  remediation.md  root-cause.md  summary.md  timeline.md
rcas/2026-07-15-payments-api-p99-latency/: final-review.md  impact.md  log.md  notes.md  rca.toml  remediation.md  root-cause.md  summary.md  timeline.md
rcas/2026-07-17-ledger-export-stuck/: final-review.md  impact.md  log.md  notes.md  rca.toml  remediation.md  root-cause.md  summary.md  timeline.md
src/: ansi.rs  banner.rs  clipboard.rs  config.rs  error.rs  fuzzy.rs  lib.rs  links.rs  main.rs  markdown.rs  model.rs  prs.rs  skills.rs  store.rs  update.rs
src/cli/: mod.rs  subcommands.rs
src/cli/tests/: parse.rs
src/store/: context.rs  fsio.rs  mod.rs  mutate.rs
src/tests/: ansi.rs  clipboard.rs  config.rs  markdown.rs  model.rs  similar.rs  skills.rs
src/ui/: actions.rs  event_loop.rs  keys.rs  mod.rs  mouse.rs  overlays.rs  pane.rs  search.rs  tabs.rs  view.rs
src/update/: install.rs
web/: .env.example  .gitignore  .prettierrc.json  DEPLOY.md  Dockerfile  Dockerfile.dockerignore  README.md  astro.config.mjs  docker-compose.yml  nginx.conf  package-lock.json  package.json  tsconfig.json
(+79 files in other folders)
