[package]
name = "beagle-desktop"
version = "0.2.0"
description = "Beagle desktop app: a native viewer for RCA workspaces"
authors = ["Matthew Myrick"]
license = "MIT"
repository = "https://github.com/matthewmyrick/beagle"
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name distinct from the bin on Windows.
name = "beagle_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# The binary is named "Beagle" (not the crate name) so `tauri dev` runs
# an executable called Beagle — macOS shows the executable name in the
# dock and menu bar in dev, and this is what makes it say "Beagle" there.
# Matches `mainBinaryName` in tauri.conf.json; bundled builds already use
# `productName`.
[[bin]]
name = "Beagle"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# The whole domain layer — model, store, markdown, similar — comes from
# the CLI crate. The desktop app is a renderer, not a second
# implementation of the data format.
beagle = { path = "../../cli" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
